hand track and detect

--- a/style/global-style.css
+++ b/style/global-style.css
@@ -21,6 +21,11 @@ body {
     overflow: hidden;
 }
 
+#can {
+    width: 50%;
+    height: 50%;
+}
+
 .container {
     position: absolute;
     background-color: #00000056;
