--- a/style/global-style.css
+++ b/style/global-style.css
@@ -21,9 +21,10 @@ body {
     overflow: hidden;
 }
 
-#can {
-    width: 50%;
-    height: 50%;
+#renderCanvas {
+    width: 100%;
+    height: 100%;
+    touch-action: none;
 }
 
 .container {
