can change phone camera

--- a/artthe-backend/public/pages/TEL/tel.hbs
+++ b/artthe-backend/public/pages/TEL/tel.hbs
@@ -14,6 +14,7 @@
         <video class="input_video"></video>
         <canvas class="phone-out output_canvas"></canvas>
     </div>
+    <div class="control-panel"></div>
 </body>
 <script src="../../js/telcli.bundle.js"></script>
 
